--- a/index.html
+++ b/index.html
@@ -226,7 +226,17 @@
                         </div>
                     </div>
                     <!-- end of card -->
-
+			
+		    <!-- Card -->
+                    <div class="card">
+                        <img class="card-image" src="images/services-icon-3.jpg" alt="alternative">
+                        <div class="card-body">
+                            <h4 class="card-title">Microsoft Office</h4>
+                            <p>With all the information in place you will be presented with an action plan that your company needs to follow</p>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+			
                     <!-- Card -->
                     <div class="card">
                         <img class="card-image" src="images/services-icon-3.jpg" alt="alternative">
