--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
                     <div class="card">
                         <img class="card-image" src="images/services-icon-3.jpg" alt="alternative">
                         <div class="card-body">
-                            <h4 class="card-title">Microsoft Office</h4>
-                            <p>With all the information in place you will be presented with an action plan that your company needs to follow</p>
+                            <h4 class="card-title">Accessories</h4>
+                            <p>People generally love their cars and this manifests in investing in care and maintenance to keep them in top shape. However, from daily commutes to that summer road trip, having the right car accessories for your specific vehicle can certainly make all the difference to your safety and comfort. If you’re looking to spice up your ride’s interior or exterior, then we have a wide range of products to consider. Whether you’re in the market for car seat covers or general interior accessories, we’ll almost certainly have what you need.</p>
                         </div>
                     </div>
                     <!-- end of card -->
